k8s/site-perso-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-perso
  namespace: site-perso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site-perso
  template:
    metadata:
      labels:
        app: site-perso
    spec:
      containers:
      - name: site-perso
        image: juliendelavande/site-perso:1.3.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
