k8s/site-perso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-perso-service
  namespace: site-perso
spec:
  selector:
    app: site-perso
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
