k8s/site-perso-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-perso-ingress
  namespace: site-perso
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - delavande.fr
    secretName: delavande-fr-tls
  rules:
  - host: delavande.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site-perso-service
            port:
              number: 80
